# Q-Forge-mcp-server

./: .gitignore  README.md  pyproject.toml  pytest.ini
mcp_sql_agent/: init_db.py
mcp_sql_agent/app/: .env.example  app_container.py  audit.log.jsonl  main.py
mcp_sql_agent/app/MCP/: mcp_server.py
mcp_sql_agent/app/MCP/tools/: sql_tools.py
mcp_sql_agent/app/application/: audit_log.py  dto.py  erd_rendering.py  query_cache.py  safety_policy.py  sql_agent_service.py  sql_formatting.py  sql_planning.py  sql_validation.py
mcp_sql_agent/app/application/use_cases/: __init__.py  ask_db.py  get_erd.py  plan_query.py  run_sql.py  run_sql_write.py  translate.py
mcp_sql_agent/app/domain/: ports.py
mcp_sql_agent/app/infrastructure/: config.py  db_context.py  logging_config.py
mcp_sql_agent/app/infrastructure/db/: __init__.py  sqlalchemy_adapter.py
mcp_sql_agent/app/infrastructure/llm/: translator.py
mcp_sql_agent/app/interfaces/: __init__.py
mcp_sql_agent/app/interfaces/mcp/: __init__.py  mcp_server.py
mcp_sql_agent/app/interfaces/mcp/tools/: sql_tools.py
mcp_sql_agent/tests/: conftest.py  test_policy_cache_audit_erd.py  test_services.py  test_sql_tools.py
